update to customizedauth

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@upbond/customauth",
-  "version": "1.0.0",
+  "name": "@toruslabs/customauth",
+  "version": "13.0.0",
   "description": "CustomAuth login with torus to get user private key",
   "main": "dist/customauth.cjs.js",
   "module": "dist/customauth.esm.js",
@@ -32,34 +32,44 @@
   },
   "dependencies": {
     "@chaitanyapotti/register-service-worker": "^1.7.3",
-    "@toruslabs/broadcast-channel": "^9.0.0",
-    "@toruslabs/constants": "^13.0.2",
-    "@toruslabs/eccrypto": "^4.0.0",
-    "@toruslabs/fetch-node-details": "^13.0.2",
-    "@toruslabs/http-helpers": "^5.0.0",
-    "@toruslabs/metadata-helpers": "^5.0.0",
-    "@toruslabs/torus.js": "^12.0.1",
-    "base64url": "^3.0.1",
+    "@rushstack/eslint-patch": "^1.5.1",
+    "@toruslabs/broadcast-channel": "^7.0.0",
+    "@toruslabs/constants": "^10.0.0",
+    "@toruslabs/eccrypto": "^3.0.0",
+    "@toruslabs/fetch-node-details": "^10.0.0",
+    "@toruslabs/http-helpers": "^4.0.0",
+    "@toruslabs/metadata-helpers": "^4.0.0",
+    "@toruslabs/torus.js": "^8.0.0",
     "bowser": "^2.11.0",
     "events": "^3.3.0",
     "jwt-decode": "^3.1.2",
     "lodash.merge": "^4.6.2",
-    "loglevel": "^1.8.1"
+    "loglevel": "^1.8.1",
+    "oidc-client": "1.11.5"
   },
   "devDependencies": {
-    "@sentry/types": "^7.73.0",
-    "@toruslabs/config": "^2.0.2",
-    "@toruslabs/eslint-config-typescript": "^3.0.1",
-    "@toruslabs/torus-scripts": "^5.0.5",
+    "@sentry/types": "^7.50.0",
+    "@toruslabs/eslint-config-typescript": "^2.0.0",
+    "@toruslabs/torus-scripts": "^4.0.0",
     "@types/lodash.merge": "^4.6.7",
-    "eslint": "^8.51.0",
+    "@typescript-eslint/eslint-plugin": "^5.59.2",
+    "@typescript-eslint/parser": "^5.59.2",
+    "eslint": "^8.39.0",
+    "eslint-plugin-import": "^2.27.5",
+    "eslint-plugin-mocha": "^10.1.0",
+    "eslint-plugin-n": "^15.7.0",
+    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-promise": "^6.1.1",
+    "eslint-plugin-simple-import-sort": "^10.0.0",
+    "eslint-plugin-tsdoc": "^0.2.17",
+    "eslint-plugin-vue": "^9.11.0",
     "husky": "^8.0.3",
-    "lint-staged": "^14.0.1",
-    "prettier": "^3.0.3",
-    "rimraf": "^5.0.5",
-    "typescript": "^5.2.2"
+    "lint-staged": "^13.2.2",
+    "prettier": "^2.8.8",
+    "rimraf": "^5.0.0",
+    "typescript": "^4.9.4"
   },
-  "author": "UPBOND",
+  "author": "Torus Labs",
   "license": "MIT",
   "lint-staged": {
     "!(*d).{js,ts}": [
@@ -72,12 +82,12 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/upbond/upbond-custom-auth.git"
+    "url": "git+https://github.com/torusresearch/CustomAuth.git"
   },
   "bugs": {
-    "url": "https://github.com/upbond/upbond-custom-auth/issues"
+    "url": "https://github.com/torusresearch/CustomAuth/issues"
   },
-  "homepage": "https://github.com/upbond/upbond-custom-auth#readme",
+  "homepage": "https://github.com/torusresearch/CustomAuth#readme",
   "keywords": [
     "CustomAuth",
     "customauth",
@@ -87,7 +97,7 @@
     "direct auth"
   ],
   "engines": {
-    "node": ">=18.x",
-    "npm": ">=9.x"
+    "node": ">=16.18.1",
+    "npm": ">=8.x"
   }
 }
