--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@upbond/customauth",
-  "version": "1.0.1-rc.0",
+  "version": "1.0.1",
   "description": "CustomAuth login with torus to get user private key",
   "main": "dist/customauth.cjs.js",
   "module": "dist/customauth.esm.js",
